# gaussian-splatting

./: train.py
arguments/: __init__.py
gaussian_renderer/: __init__.py
scene/: __init__.py  cameras.py  colmap_loader.py  dataset_readers.py  gaussian_model.py
submodules/diff-gaussian-rasterization/: CMakeLists.txt  README.md  ext.cpp  rasterize_points.cu  rasterize_points.h  setup.py
submodules/diff-gaussian-rasterization/cuda_rasterizer/: auxiliary.h  forward.cu  rasterizer.h  rasterizer_impl.cu  rasterizer_impl.h
submodules/diff-gaussian-rasterization/diff_gaussian_rasterization/: __init__.py
utils/: general_utils.py  graphics_utils.py  sh_utils.py  system_utils.py
